--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,7 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '12.4'
+platform :ios, '16.0'
 install! 'cocoapods', :deterministic_uuids => false
 
 target 'NFCTestApp' do
@@ -26,10 +26,10 @@ target 'NFCTestApp' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'NFCTestAppTests' do
-    inherit! :complete
-    # Pods for testing
-  end
+  #target 'NFCTestAppTests' do
+  #  inherit! :complete
+  #  # Pods for testing
+  #end
 
   post_install do |installer|
     react_native_post_install(
