Working copy with NFC Tag reader

--- a/ios/NFCTestApp/Info.plist
+++ b/ios/NFCTestApp/Info.plist
@@ -26,6 +26,10 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSAllowsArbitraryLoadsForMedia</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
@@ -51,5 +55,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NFCReaderUsageDescription</key>
+	<string>&quot;To write/update MyRUC NFC E-Paper Display&quot;</string>
 </dict>
 </plist>
